1.add libs and so File 2.ProDialog in Faker project  to revise and it xml File 3. add RFIDUTIL in app project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,12 @@ repositories {
     }
 }
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':fakerti')
+    implementation files('libs/cw-deviceapi(20180201).jar')
+    implementation files('libs/IGLBarDecoder.jar')
+    implementation files('libs/xUtils-2.5.5.jar')
 }
