1.add queryActivity and it logit 2.create checkAvctive

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.QueryActivity" />
+        <activity android:name=".view.CheckActivity" />
     </application>
 
 </manifest>
