1.add AboutActivity 2.revise StatusToolBar Color

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
         <activity android:name=".view.QueryActivity" />
         <activity android:name=".view.CheckActivity" />
+        <activity android:name=".view.AboutActivity" />
     </application>
 
 </manifest>
