--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".view.QueryActivity" />
         <activity android:name=".view.CheckActivity" />
         <activity android:name=".view.AboutActivity" />
+        <activity android:name=".view.SettingActivity" />
     </application>
 
 </manifest>
