--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".view.CheckActivity" />
         <activity android:name=".view.AboutActivity" />
         <activity android:name=".view.SettingActivity" />
+        <activity android:name=".view.OutActivity" />
     </application>
 
 </manifest>
